Assets/style.css
/* General font style and layout choices for whole page */
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Noto Sans TC', sans-serif;
    color: white;
}

/* baseline color */
body {
    background-color: #d9dcd6;
}

/* attempted to find nice color to match theme of the page with a bit of unique flair than standard grey */
.header {
    padding: 20px;
    background: -webkit-linear-gradient(360deg, #1C1C1C 10%, #494949 360%); background: -moz-linear-gradient(360deg, #1C1C1C 10%, #494949 360%); background: linear-gradient(360deg, #1C1C1C 10%, #494949 360%);
}

/* main header layout */
.header h1 {
    display: inline-block;
    background-size: 50px 50px;
    font-size: 48px;
    color: #7C898D;
}

/* bit of stylistic choice for header */
.header h1 .jk {
    color: #4d4dff;
}

/* basic menu nested in navigation */
.header menu {
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-size: 20px;
}

.header menu ul {
    list-style-type: none;
}

.header menu ul li {
    display: inline-block;
    margin-left: 25px;
}

/* didn't like underline in menu, made text in navigation plain */
a {
    text-decoration: none;
}

/* self-adjusting banner at top of page */
.hero {
    height: 100%;
    width: 100%;
    margin-bottom: -1px;
    background-size: cover;
    background-position: center;
}

/* attempted to make flex work in order to stylize and fit well regardless of type of machine used to access the page */
main {
    display: flex;
    flex-wrap: wrap;
}

.content {
    width: 100%;
    flex: 2 1 200px;
}

/* stylistic choice to have alternating background colors */
.about_me, .contact_me {
    height: 300px;
    width: 100%;
    background-color:#ecf2f9;
}

.work {
    margin-bottom: 0px;
    padding: 10px;
    height: 1375px;
    background-color: #d9e6f2;
}

/* attempted to properly line images in work portion */
.work article {
    display: inline-block;
    display: flex;
}

.resume {
    margin-bottom: 0px;
    padding: 10px;
    height: 300px;
    background-color: #d9e6f2;
}

/* spent too much time using relative to line folder and summary header, did not have time to go back and readjust with flex */
.about_me h2 {
    position: relative;
    top: 90px;
    left: -205px;
    font-size: 35px;
    color: #7C898D;
}

/* all headers in each article adjust to fit nicely over the folder image */
.work h2 {
    position: relative;
    top: 90px;
    left: -175px;
    font-size: 35px;
    color: #7C898D;
}

.contact_me h2 {
    position: relative;
    top: 90px;
    left: -220px;
    font-size: 35px;
    color: #7C898D;
}

.resume h2 {
    position: relative;
    top: 90px;
    left: -190px;
    font-size: 35px;
    color: #7C898D;
}

/* maintaining stylistic choice in text */
.about_me h2 .diff_color {
    color: #4d4dff;
}

.work h2 .diff_color {
    color: #4d4dff;
}
/* work section that I could not get to function quite like I wanted to line nicely at start and on adjustment of window size */
.stock_position1 {
    flex: 1 0 900px;
    text-align: center;
}

/* separate style and position classes to attempt maintaining size difference between main project and other 6 */
.stock_style1 {
    max-width: 1500px;
    height: 500px;
    border: 10px solid #4d4dff;
}

.stock_position {
    flex: 1 0 200px;
    margin: 30px;
}

.stock_style {
    max-width: 500px;
    max-height: 350px;
    border: 10px solid #4d4dff;
    margin: 0 2rem;
    justify-content: space-between;
}

/* ran out of time for proper :hover effects to glow on work image hover */

.stock_style:hover {
    
}

.contact_me h2 .diff_color {
    color: #4d4dff;
}

.resume h2 .diff_color {
    color: #4d4dff;
}

/* ran out of time to readjust, maintained initial style choice in attempting to line folder image up to the left */
.float-left {
    float: left;
    margin-right: 25px;
}

/* simple stylistic choice */
p {
    font-size: 16px;
    padding-bottom: 32px;
}

.footer {
    padding: 30px;
    clear: both;
    text-align: center;
    background: -webkit-linear-gradient(360deg, #1C1C1C 10%, #494949 360%); background: -moz-linear-gradient(360deg, #1C1C1C 10%, #494949 360%); background: linear-gradient(360deg, #1C1C1C 10%, #494949 360%);
}

.footer h2 {
    font-size: 20px;
}

/* Tablet size - Get rid of folder icon and change header style for content. Wasn't able to achieve clean image and header adjustment*/
@media screen and (max-width: 992px) {
    .media_hide{
        visibility: hidden;
    }

    .content summary h2 {
        top: 0px;
        left: 0px;
        flex: 1 0 200px;
        padding: 10px;
        border-width: 1px;
        background-color: #1C1C1C;
    }

    .content summary p {
        font-stretch: wider;
    }
}
  
  /* Smartphone size - ran out of time to adjust a lot of elements to readjust according to vision */
@media screen and (max-width: 768px) {

}

